--- a/src/main/resources/templates/WebKhachHang/forgot-password.html
+++ b/src/main/resources/templates/WebKhachHang/forgot-password.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #000000;
-            --secondary-color: #333333;
+            --primary-color: #153054;
+            --secondary-color: #9FD5F7;
             --accent-color: #666666;
             --light-gray: #f8f9fa;
             --medium-gray: #e9ecef;
