--- a/src/main/resources/templates/WebQuanLy/verify-face.html
+++ b/src/main/resources/templates/WebQuanLy/verify-face.html
@@ -35,7 +35,7 @@
 
         .face-overlay {
             position: absolute;
-            top: 50%;
+            top: 60%; /* ↓ Đưa vòng tròn xuống giữa */
             left: 50%;
             width: 180px;
             height: 180px;
@@ -54,7 +54,7 @@
 
         .face-progress-ring {
             position: absolute;
-            top: 50%;
+            top: 60%; /* đồng bộ vị trí */
             left: 50%;
             width: 200px;
             height: 200px;
@@ -73,7 +73,7 @@
 
         .face-ticks {
             position: absolute;
-            top: 50%;
+            top: 60%; /* đồng bộ vị trí */
             left: 50%;
             width: 200px;
             height: 200px;
